--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="container" >
+  <div class="post-wrapper" *ngFor="let post of data">
+    <div class="post-title">{{post.title}}</div>
+    <div class="post-body">{{post.body}}</div>
+  </div>
+</div>
