--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   border: 1px solid #d9d9d9;
   border-radius: 10px;
-  height: 200px;
+  min-height: 200px;
   width: 700px;
   margin-bottom: 30px;
 }
@@ -31,4 +31,5 @@
 .post-body {
   padding-left: 20px;
   margin-top: 20px;
+  max-width: 650px;
 }
