--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="logo" routerLink="home">Postsapp</div>
   <div class="search-bar">
-    <input class="searchInput" type="text" placeholder="Search Post">
+    <input class="searchInput" type="text" placeholder="Pesquisar Post">
     <button class="search-btn"><img src="../../../../assets/searchIcon.svg" alt="search icon" width="30px" height="30px"></button>
   </div>
 </div>
